--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -855,6 +855,7 @@
         @media(max-width:767px) {
             .btn-black{
                 width: 150px;
+                height: 42px;
             }
         }
         @media(max-width:400px) {
