--- a/css/common.css
+++ b/css/common.css
@@ -541,12 +541,11 @@ button {
 
   .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
   .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
-    height: 52px; } }
+    padding: 3px 24px; } }
 @media (max-width: 1481px) {
   .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
   .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
-    padding: 5px 18px;
-    height: 46px;
+    padding: 3px 18px;
     font-size: 13px; }
 
   .filter-dropdown-menu .filter-form-content .inp-block {
@@ -641,5 +640,11 @@ button {
 
 .not-allowed {
   cursor: not-allowed !important; }
+
+.custom-modal .inp-block-modal .custom-inp.ant-picker {
+  padding: 8px 15px; }
+  @media (max-width: 1679px) {
+    .custom-modal .inp-block-modal .custom-inp.ant-picker {
+      padding: 6px 15px; } }
 
 /*# sourceMappingURL=common.css.map */
