--- a/scss/common.scss
+++ b/scss/common.scss
@@ -458,6 +458,8 @@ button{
     }
 }
 
+
+
 .react-custom-select-rect{
     .css-13cymwt-control, .css-t3ipsp-control{
         border-radius: 8px;
@@ -658,14 +660,14 @@ button{
     }
     .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
     .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
-        height: 52px;
+        padding: 3px 24px;
     }
 }
 @media($sm-1481){
     .filter-dropdown-menu .react-custom-select .css-13cymwt-control, 
     .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
-        padding: 5px 18px;
-        height: 46px;
+        padding: 3px 18px;
+        // height: 46px;
         font-size: 13px;
     }
     .filter-dropdown-menu .filter-form-content .inp-block {
@@ -792,4 +794,11 @@ button{
 }
 .not-allowed{
     cursor: not-allowed !important;
+}
+
+.custom-modal .inp-block-modal .custom-inp.ant-picker{
+    padding: 8px 15px;    
+    @media($sm-1679){
+        padding: 6px 15px;
+    }   
 }
