--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -465,5 +465,7 @@
     color: #fff; }
   .theme-dark .react-custom-select .css-1jj59y3-MenuList2 {
     background: #292D32; }
+  .theme-dark .react-custom-select .css-d7l1ni-option {
+    background-color: #1D355C; }
 
 /*# sourceMappingURL=dark-theme.css.map */
