--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -744,5 +744,8 @@ $dark-block-2: #2B2C2E;
         .css-1jj59y3-MenuList2{
             background: $nav-dark;
         }
+        .css-d7l1ni-option{
+            background-color: $bg-dark-blue;
+        }
     }
 }
