--- a/css/common.css
+++ b/css/common.css
@@ -647,4 +647,7 @@ button {
     .custom-modal .inp-block-modal .custom-inp.ant-picker {
       padding: 6px 15px; } }
 
+.legend-l31H9iuA, .menu-Tx5xMZww.context-menu {
+  display: none !important; }
+
 /*# sourceMappingURL=common.css.map */
