--- a/scss/common.scss
+++ b/scss/common.scss
@@ -802,3 +802,7 @@ button{
         padding: 6px 15px;
     }   
 }
+
+.legend-l31H9iuA, .menu-Tx5xMZww.context-menu{
+    display: none !important;
+}
