--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -19,7 +19,8 @@ $dark-block-2: #2B2C2E;
     .custom-modal .modal-content, .title-search-box .input-group, .title-search-box .input-group .form-control, 
     .header-wrapper .right-block .notify-dropdown .notify-btn, .sec-title-block .download-excel-btn, 
     .filter-dropdown-group .filter-dropdown-menu, .filter-dropdown-menu .filter-form-content .custom-inp, 
-    .header-wrapper .right-block .my-acc-dropdown .dropdown-menu
+    .header-wrapper .right-block .my-acc-dropdown .dropdown-menu, .conect-wallet .walles-otr .wallet-btn, 
+    .change-pass-modal .modal-dialog .modal-content
     {
         background-color: $dark-bg;
     }
@@ -43,8 +44,12 @@ $dark-block-2: #2B2C2E;
     .title-search-box .input-group .form-control, .filter-dropdown-group .filter-dropdown-btn, .card-sec .h-card-block p, 
     .header-wrapper .right-block .buy-pros-block .pros-label, .sec-title-block .download-excel-btn, .filter-dropdown-menu .filter-title h4, 
     .inp-block .form-label, .filter-dropdown-menu .filter-form-content .custom-inp, 
-    .header-wrapper .right-block .my-acc-dropdown .dropdown-menu .dropdown-item
-
+    .header-wrapper .right-block .my-acc-dropdown .dropdown-menu .dropdown-item, .conect-wallet .wallet-title, .conect-wallet p, 
+    .login-wrapper .login-left-block .bottom-content .checkbox-container, .change-pass-modal .modal-dialog .modal-header .heading-top .modal-title, 
+    .change-pass-modal .modal-dialog .modal-header .heading-top , .change-pass-modal .modal-dialog .modal-body .form-group .input-group label, 
+    .change-pass-modal .modal-dialog .modal-body .form-group .input-group .form-control, 
+    .change-pass-modal .modal-dialog .modal-header .heading-top h5, .fgt-modal .modal-dialog .modal-body .form-group .input-group .form-control, 
+    .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn
     {
         color: $primary-light !important;
     }
@@ -76,14 +81,19 @@ $dark-block-2: #2B2C2E;
     .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon img, 
     .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block .locked-title img, 
     .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-det .props-value .icon-img, 
-    .custom-modal .btn-close img,
+    .custom-modal .btn-close img, .fgt-modal .modal-dialog .modal-header .close-modal img
     {
         filter: grayscale(1) invert(1) brightness(2);
     }
 
     // img white
     .claim-reward-modal .claim-reward-modal-body .modal-title h4 .title-icon img, 
-    .header-wrapper .right-block .buy-pros-block .buy-pros-btn img, .sec-title-block .download-excel-btn img{
+    .header-wrapper .right-block .buy-pros-block .buy-pros-btn img, .sec-title-block .download-excel-btn img, 
+    .change-pass-modal .modal-dialog .modal-body .form-group .input-group .fgt-view-icon img, 
+    .change-pass-modal .modal-dialog .modal-body .form-group .input-group img, .change-pass-modal .modal-dialog .modal-header .close-modal img, 
+    .login-wrapper .login-left-block .form-group .input-group .icon-pass img, .login-wrapper .login-left-block .form-group .input-group img, 
+    .fgt-modal .modal-dialog .modal-body .form-group .input-group .fgt-mail-icon, 
+    .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn img{
         filter: grayscale(1) brightness(4);
     }
     
@@ -698,7 +708,7 @@ $dark-block-2: #2B2C2E;
     .ant-picker-dropdown .ant-picker-header{
         border-bottom-color: $dark-border;
     }
-    .custom-modal .modal-content{
+    .custom-modal .modal-content, .change-pass-modal .modal-dialog .modal-content{
         border: solid 1px $table-bodrer;
     }
     .ant-picker-dropdown .ant-picker-cell-in-view.ant-picker-cell-in-range::before{
@@ -747,5 +757,25 @@ $dark-block-2: #2B2C2E;
         .css-d7l1ni-option{
             background-color: $bg-dark-blue;
         }
+    }
+    .conect-wallet .walles-otr .wallet-btn{
+        border-color: $dark-border;
+        color: #B2B2B2;
+        &.active{
+            color: $primary-light;
+            border-color: $primary-light;
+        }
+        &:hover{
+            border-color: $primary-light;
+        }
+    }
+    .login-wrapper .login-left-block .bottom-content .checkbox-container input:checked ~ .checkmark{
+        background-color: $dark-bg;
+        border: solid 1px $bg-color-check;
+    }
+    .change-pass-modal .modal-dialog .modal-body .form-group .input-group .form-control{
+        color: #fff !important;
+        -webkit-text-fill-color: #fff !important;
+        border: 1px solid #fff;
     }
 }
