notification dark mode

--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -796,7 +796,7 @@ $dark-block-2: #2B2C2E;
                 background-color: #121622;
             }
             .icon{
-                background-color: #1B2439;
+                background-color: #1B2439 !important;
             }
             .det {
                 p, .time{
