--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -347,6 +347,7 @@
                     display: flex;
                     align-items: center;
                     word-break: break-word;
+                    text-transform: uppercase;
                 }
                 p.txt-content
                 {
