--- a/css/staking.css
+++ b/css/staking.css
@@ -239,7 +239,8 @@
     .card-section-outer .top-block .heading-txt .desc-content h2 {
       display: flex;
       align-items: center;
-      word-break: break-word; }
+      word-break: break-word;
+      text-transform: uppercase; }
     .card-section-outer .top-block .heading-txt .desc-content p.txt-content {
       margin-top: 5px;
       padding-left: 12px;
