--- a/css/staking.css
+++ b/css/staking.css
@@ -14,7 +14,7 @@
 
 .staking-dashboard-outer {
   display: flex; }
-  @media (max-width: 1100px) {
+  @media (max-width: 1199px) {
     .staking-dashboard-outer {
       flex-direction: column; } }
   .staking-dashboard-outer .welcome-stake-outer {
@@ -27,7 +27,7 @@
     @media (max-width: 1679px) {
       .staking-dashboard-outer .welcome-stake-outer {
         padding: 20px 30px; } }
-    @media (max-width: 1100px) {
+    @media (max-width: 1199px) {
       .staking-dashboard-outer .welcome-stake-outer {
         margin-top: 0px;
         margin-right: 0px; } }
@@ -87,12 +87,15 @@
     flex: 0 0 28%; }
     @media (max-width: 1679px) {
       .staking-dashboard-outer .total-value-outer {
+        flex: 0 0 32%;
+        padding: 20px 22px; } }
+    @media (max-width: 1441px) {
+      .staking-dashboard-outer .total-value-outer {
+        flex: 0 0 35%;
         padding: 20px 22px; } }
     @media (max-width: 1199px) {
       .staking-dashboard-outer .total-value-outer {
-        flex: 0 0 35%; } }
-    @media (max-width: 1100px) {
-      .staking-dashboard-outer .total-value-outer {
+        flex: 0 0 35%;
         margin-top: 15px; } }
     .staking-dashboard-outer .total-value-outer .stake-tot-locked {
       border-bottom: 1px solid #e3e4f3;
@@ -163,7 +166,7 @@
           font-size: 15px; }
           @media (max-width: 1679px) {
             .staking-dashboard-outer .total-value-outer .tot-detl-outer .total-inner .label-txt {
-              font-size: 14px; } }
+              font-size: 13px; } }
         .staking-dashboard-outer .total-value-outer .tot-detl-outer .total-inner .label-num {
           color: #2E4276;
           font-weight: 600;
