--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -6,7 +6,7 @@
 .staking-dashboard-outer
 {
     display:flex;
-    @media(max-width:1100px)
+    @media(max-width:1199px)
     {
             flex-direction: column;
     }
@@ -22,7 +22,7 @@
         {
             padding:20px 30px;
         }
-        @media(max-width:1100px)
+        @media(max-width:1199px)
         {
             margin-top: 0px;
             margin-right: 0px;
@@ -113,14 +113,20 @@
         flex: 0 0 28%;
         @media(max-width:1679px)
         {
+            flex: 0 0 32%;
+            padding:20px 22px;
+        }
+        @media(max-width:1441px)
+        {
+            flex: 0 0 35%;
             padding:20px 22px;
         }
         @media(max-width:1199px)
         {
             flex: 0 0 35%;
-        }
-        @media(max-width:1100px)
-        {
+        // }
+        // @media(max-width:1100px)
+        // {
             margin-top: 15px;
         }
         .stake-tot-locked
@@ -216,7 +222,7 @@
                     font-size: 15px;
                     @media(max-width:1679px)
                     {
-                        font-size: 14px;
+                        font-size: 13px;
                     }
                 }
                 .label-num {
